# multi-agent-mvp

./: .gitattributes  .gitignore  LICENSE  README.md  cleaner_repo.bas  issue_calc.md  repo_tree.txt  setup-git-bash.sh
.github/: CODEOWNERS
.github/agents/: analyzer.py  dev.py  progress.py  requirements.txt  reviewer - Copia.py  reviewer.py  utils.py
.github/agents/ana_core/: __init__.py  issue_analyzer.py  plan_generator.py  report_builder.py  task_creator.py
.github/agents/dev_core/: __init__.py  diff_helpers.py  diff_processor.py  errors.py  git_operations.py  github_client.py  guards.py  path_isolation.py  prompt_blocks.py  snapshots.py
.github/agents/dev_modes/: __init__.py  issue_mode - Copia.py  issue_mode.py  pr_fix_mode.py
.github/agents/prg_core/: __init__.py  pr_detector.py  relationship_parser.py  status_updater.py  task_sequencer.py
.github/agents/refacing_main/: MANIFEST.in  makefile  pyproject.toml  setup.py
.github/agents/refacing_main/refacing_engine/: README.md  __init__.py  cli.py  config.py  core.py  exceptions.py  integration.py  keep_blocks.py  reface_engine.py  rewriter.py  utils.py  validator.py
.github/agents/refacing_main/refacing_engine/test/: __init__.py  test_core.py
.github/agents/rew_core/: __init__.py  comment_manager - Copia.py  llm_reviewer - Copia.py  project_detector.py
.github/agents/rew_policies/: __init__.py  label_manager.py  policy_enforcer.py
.github/agents/state/: __init__.py  diff_record.py  prompt_builder.py  snapshot_store.py  snapshot_utils.py  thread_ledger.py
.github/agents/utils/: __init__.py  diff_processing.py  file_validation.py  github_api.py  issue_parsing.py  llm_providers.py  reface_engine.py  system_info.py
.github/prompts/: analyzer.md  dev.md  reviewer.md
.github/workflows/: analyze.yml  dev.yml  dev_fix.yml  progress.yml  reviewer.yml
docs/: EnvironmentVariablesReference.md  FinalGoStatusForUserTesting.md  Pre-FlightCheckListForUserTesting.md  chk_RepositorySettingChecklist.md  chk_Secrets&VariablesVerification.md  chk_SystemIntegrationTestCommand.md  chk_WorkflowFilesStructureCheck.md
projects/: README.md  math_utils.py  test_math_utils.py
projects/math/: math_utils.py
src/core/: math_utils.py
tests/unit/: test_math_utils.py
